# audio-transcription

./: .gitignore  README.md  compose.yaml
api/: .env  .env_example  api.py  dockerfile  pyproject.toml  srt.py  transcription.py  viewer.py
data/: logo.txt
frontend/: .env  dockerfile  file.py  help.py  main.py  pyproject.toml
frontend/src/: .env  .env_example  file.py  help.py  main.py  util.py
src/: viewer.py
